k8s/03_exporter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mystrom-exporter
  namespace: mystrom-exporter
  labels:
    app: mystrom-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mystrom-exporter
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mystrom-exporter
        framework: spring
    spec:
      containers:
        - image: robachmann/mystrom-exporter:1.2.0-arm64
          name: mystrom-exporter
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 10
