k8s/05_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: mystrom-ingress
  namespace: mystrom-exporter
spec:
  ingressClassName: nginx
  rules:
    - host: metrics.baar
      http:
        paths:
          - backend:
              service:
                name: mystrom-exporter
                port:
                  number: 8080
            path: /mystrom(/|$)(.*)
            pathType: Prefix
